src/app/profile-list/profile-list.component.scss
$siriusBlue: #1a237e ;

.profileListTopPane {
  height: 25vh;
  width: 100%;
  margin: auto;
  background-color: $siriusBlue;
  color: white;
  text-align: center;

  .profileListGreetingsWrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 15vh;

    .profileGreeting {
      height: 100px;
      margin: auto;
      font-weight: bold;
      font-size: 5rem;
    }
  }
}

.profileListBottomPane {
  min-height: 75vh;
  width: 100%;
  margin: auto;
  background-color: white;
  color: black;
  text-align: center;
  border-left: solid 2px #ffa000;
  border-right: solid 2px #ffa000;
  border-bottom: solid 2px #ffa000;
}

.profileListContainerTitle {
  width: 100%;
  font-size: 4rem;
  padding-top: 2vh;
}

.personListContainer {
  background-color: white;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;

  .individualProfile {
    width: 500px;
    height: 100px;
    margin: 25px;
    background-color: transparent;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    padding-top: 15px;
    text-align: left;
    padding-left: 5px;
  }
}

.profileListAvatar {
  img {
    padding-top: 10px;
    border-radius: 50%;
  }
}

.profileTextDiv {
//   display: inline-block;
  font-size: 2.5rem;
//   width: 400px;
//   text-align: left;
//   padding-left: 20px;
}


@media only screen and (max-width: 750px) {
  .personListContainer {
    background-color: white;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;

    .individualProfile {
      width: 300px;
      height: 200px;
      padding-top: 15px;
      text-align: center;
      padding-left: 5px;
    }
  }
}

